k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bm-ai-service
  labels:
    app: bm-ai
spec:
  selector:
    app: bm-ai
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
